[21] Promote pattern switch and record patterns as standard features #1300